--- a/package.json
+++ b/package.json
@@ -1,5 +1,4 @@
 {
-  "homepage": "http//storapp.github.io/plum",
   "name": "pdf_annotator-app",
   "version": "0.1.0",
   "private": true,
@@ -24,14 +23,12 @@
     "react-responsive-carousel": "^3.2.23",
     "react-router": "^6.6.1",
     "react-router-dom": "^6.6.1",
-    "react-scripts": "^5.0.1",
+    "react-scripts": "5.0.1",
     "react-scrollspy": "^3.4.3",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
     "start": "react-scripts start",
-    "predeploy": "npm run build",
-    "deploy": "gh-pages -d build",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
@@ -61,7 +58,6 @@
     "eslint-config-airbnb-base": "^14.2.1",
     "eslint-plugin-import": "^2.27.5",
     "eslint-plugin-react": "^7.32.1",
-    "gh-pages": "^5.0.0",
     "tailwindcss": "^3.2.4"
   }
 }
